--- a/docker/kafka/dockerfile
+++ b/docker/kafka/dockerfile
@@ -1,4 +1,8 @@
 FROM confluentinc/cp-kafka:6.1.1
 USER 0 
-RUN chgrp -R 0 /home/appuser && chmod -R g=u /home/appuser
+RUN userdel appuser
+RUN useradd -r -u 1000879999 -g 0 appuser
+RUN chgrp -R 0 /home/appuser && chmod g=u /home/appuser
+RUN chgrp -R 0 /var/lib && chmod g=u /var/lib
+
 USER appuser
