--- a/docker/kafka/dockerfile
+++ b/docker/kafka/dockerfile
@@ -1,4 +1,4 @@
-FROM confluentinc/cp-kafka:6.1.1
+FROM docker-remote.artifacts.developer.gov.bc.ca/confluentinc/cp-kafka:6.1.1
 USER 0 
 RUN set -x && \
     chgrp -R 0 /home/appuser && chmod g=u /home/appuser && \
