kafka-rest configs

--- a/docker/kafka-rest/buildconfig.yaml
+++ b/docker/kafka-rest/buildconfig.yaml
@@ -1,10 +1,10 @@
 apiVersion: build.openshift.io/v1
 kind: BuildConfig
 metadata:
-  name: cp-kafka
+  name: cp-kafka-rest
   namespace: c2053d-dev
   labels:
-     app: kafka
+     app: kafka-rest
 spec:
   imagePullSecrets:
     - name: artifactory-creds
@@ -16,8 +16,8 @@ spec:
   strategy:
     type: Docker
     dockerStrategy:
-      dockerfilePath: kafka/dockerfile
+      dockerfilePath: kafka-rest/dockerfile
   output:
     to:
       kind: ImageStreamTag
-      name: 'kafka:6.1.1'
+      name: 'kafka-rest:6.1.1'
