--- a/docker/kafka-rest/dockerfile
+++ b/docker/kafka-rest/dockerfile
@@ -1,4 +1,4 @@
-FROM docker-remote.artifacts.developer.gov.bc.ca/confluentinc/cp-kafka-rest:6.1.1
+FROM confluentinc/cp-kafka-rest:6.1.1
 USER 0 
 RUN set -x && \
     chgrp -R 0 /home/appuser && chmod g=u /home/appuser && \
