more permissions issues

--- a/docker/zookeeper/dockerfile
+++ b/docker/zookeeper/dockerfile
@@ -2,5 +2,5 @@ FROM docker-remote.artifacts.developer.gov.bc.ca/confluentinc/cp-zookeeper:6.1.1
 USER 0 
 RUN set -x && \
     chgrp -R 0 /home/appuser && chmod g=u /home/appuser && \
-    chgrp -R 0 /var/lib && chmod g=u /var/lib 
+    chgrp -R 0 /var && chmod g=u /var 
 USER appuser
