--- a/docker/zookeeper/buildconfig.yaml
+++ b/docker/zookeeper/buildconfig.yaml
@@ -18,7 +18,7 @@ spec:
     dockerStrategy:
       pullSecret:
         name: artifactory-creds
-      dockerfilePath: kafka/dockerfile
+      dockerfilePath: zookeeper/dockerfile
   output:
     to:
       kind: ImageStreamTag
